# plover-python-dictionary-lib

./: MANIFEST.in  README.md  example_python_dictionary.py  plover_python_dictionary_lib.py  setup.cfg
example/: 00_two_letter_fingerspelling_example.py  Emily_modifiers_example.py  single_stroke_commands_v1.py
plover_python_dictionary_lib/: __init__.py
