[metadata]
name = plover_python_dictionary_lib
version = 0.2.0
author = user202729
description = Library for writing Python dictionary for Plover, and generating JSON dictionary file from Python dictionary.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-python-dictionary-lib
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover

[options]
zip_safe = True
install_requires =
	plover-stroke>=0.4.0
py_modules = plover_python_dictionary_lib
